--- a/Shop-Cars-Angular-Project/Client-Shop-Cars/src/app/app.component.html
+++ b/Shop-Cars-Angular-Project/Client-Shop-Cars/src/app/app.component.html
@@ -1,3 +1,6 @@
-<app-navigation></app-navigation>
-<router-outlet></router-outlet>
-<app-footer></app-footer>
+<ng-container *ngIf="!isReady"> <app-spinner></app-spinner></ng-container>
+<ng-container *ngIf="isReady">
+    <app-navigation></app-navigation>
+    <router-outlet></router-outlet>
+    <app-footer></app-footer>
+</ng-container>
