--- a/Shop-Cars-Angular-Project/Client-Shop-Cars/src/app/core/navigation/navigation.component.html
+++ b/Shop-Cars-Angular-Project/Client-Shop-Cars/src/app/core/navigation/navigation.component.html
@@ -12,18 +12,21 @@
       <div class="collapse navbar-collapse" id="navbarResponsive">
         <ul class="navbar-nav ml-auto">
           <li class="nav-item active">
-            <a class="nav-link" routerLink="/about">About
+            <a class="nav-link" routerLink="/about">{{isLogged}}
               <span class="sr-only">(current)</span>
             </a>
           </li>
-          <li class="nav-item ">
-            <a class="nav-link" routerLink="/profile">Profile</a>
+          <li *ngIf="isLogged" class="nav-item active">
+            <a class="nav-link" routerLink="/create">Create</a>
           </li>
-          <li class="nav-item active">
+          <li *ngIf="!isLogged" class="nav-item active">
             <a class="nav-link" routerLink="/singin">SingIn</a>
           </li>
-          <li class="nav-item active">
+          <li *ngIf="!isLogged" class="nav-item active">
             <a class="nav-link" routerLink="/singup">SingUp</a>
+          </li>
+          <li *ngIf="isLogged" class="nav-item active">
+            <a class="nav-link" routerLink="" (click)="logout()">Logout</a>
           </li>
         </ul>
       </div>
