--- a/Shop-Cars-Angular-Project/Client-Shop-Cars/src/app/user/sing-in/sing-in.component.html
+++ b/Shop-Cars-Angular-Project/Client-Shop-Cars/src/app/user/sing-in/sing-in.component.html
@@ -1,30 +1,37 @@
+
 <div class="container">
-    <div class="row">
-      <div class="col-sm-9 col-md-7 col-lg-5 mx-auto">
-        <div class="card card-signin my-5">
-          <div class="card-body">
-            <h5 class="card-title text-center">Sign In</h5>
-            <form class="form-signin">
-              <div class="form-label-group">
-                <input type="email" id="inputEmail" class="form-control" placeholder="Email address" required autofocus>
-                <label for="inputEmail">Email address</label>
-              </div>
+  <div class="row">
+    <div class="col-sm-9 col-md-7 col-lg-5 mx-auto">
+      <div class="card card-signin my-5">
+        <div class="card-body">
+          <h5 class="card-title text-center">Sign In</h5>
+          <form #singInForm='ngForm' class="form-signin" (ngSubmit)='handleSubmit(singInForm.value)'>
+            <label for="inputEmail">
+              Email address
+            </label>
+            <div class="form-label-group">
+              <input #emailInput="ngModel" type="email" ngModel name='email' id="inputEmail" class="form-control"
+                placeholder="Email address" pattern="[a-zA-Z0-9.-_]{6,}@[a-z]+\.[a-z]+" required>
+            </div>
+            <div class="alert alert-danger" role="alert" *ngIf="emailInput.invalid && emailInput.touched">
+              Please enter valid email!
+            </div>
 
-              <div class="form-label-group">
-                <input type="password" id="inputPassword" class="form-control" placeholder="Password" required>
-                <label for="inputPassword">Password</label>
-              </div>
 
-              <div class="custom-control custom-checkbox mb-3">
-                <input type="checkbox" class="custom-control-input" id="customCheck1">
-                <label class="custom-control-label" for="customCheck1">Remember password</label>
-              </div>
-              <button class="btn btn-lg btn-primary btn-block text-uppercase" type="submit">Sign in</button>
-              <hr class="my-4">
-              
-            </form>
-          </div>
+            <label for="inputPassword">Password</label>
+            <div class="form-label-group">
+              <input #passwordInput="ngModel" type="password" ngModel name="password" pattern="^[A-Za-z\d]{5,16}$"
+                id="inputPassword" class="form-control" placeholder="Password" required>
+            </div>
+            <div class="alert alert-danger" role="alert" *ngIf="passwordInput.invalid && passwordInput.touched">
+              Password must contain only letters and digits and must between 5 and 16 symbols!
+            </div>
+            <button  class="btn btn-lg btn-primary btn-block text-uppercase">
+              Sign in
+            </button>
+          </form>
         </div>
       </div>
     </div>
   </div>
+</div>
