--- a/Shop-Cars-Angular-Project/Client-Shop-Cars/src/app/home/home.component.html
+++ b/Shop-Cars-Angular-Project/Client-Shop-Cars/src/app/home/home.component.html
@@ -11,20 +11,23 @@
     </div>
   </header>
 <!-- /.row -->
-
-<div class="row"> 
+<!-- <ng-container ><app-spinner></app-spinner></ng-container> -->
+<div class="row" *ngIf="adCars"> 
     
-    <div class="col-md-4 mb-5">
-      <div class="card h-100">
-        <img class="card-img-top" src="http://placehold.it/300x200" alt="">
+      <div class="col-md-4 mb-5" *ngFor='let adCar of adCars'>
+      <div class="card h-100" >
+        <img class="card-img-top" [src]="adCar.imgUrl" alt="">
         <div class="card-body">
-          <h4 class="card-title">Card title</h4>
-          <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sapiente esse necessitatibus neque sequi doloribus totam ut praesentium aut.</p>
+          <h4 class="card-title">{{adCar.model}}</h4>
+          <h5 class="card-price">{{adCar.price}} €</h5>
+          <p class="card-text">{{adCar.description}}</p>
         </div>
         <div class="card-footer">
-          <a href="#" class="btn btn-primary">Find Out More!</a>
+          <a href="#" class="btn btn-primary">More Info</a>
         </div>
       </div>
     </div>
+    
+    
   </div>
  
