--- a/Shop-Cars-Angular-Project/Client-Shop-Cars/src/app/core/navigation/navigation.component.html
+++ b/Shop-Cars-Angular-Project/Client-Shop-Cars/src/app/core/navigation/navigation.component.html
@@ -1,35 +1,33 @@
 
-<!-- Navigation -->
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
-    <div class="container">
-      <a class="navbar-brand" routerLink="/">Shop Cars</a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      
 
-      <input class="form-control" type="text" placeholder="Search" aria-label="Search"> 
-      <div class="collapse navbar-collapse" id="navbarResponsive">
-        <ul class="navbar-nav ml-auto">
-          <li class="nav-item active">
-            <a class="nav-link" routerLink="/about">{{isLogged}}
-              <span class="sr-only">(current)</span>
-            </a>
-          </li>
-          <li *ngIf="isLogged" class="nav-item active">
-            <a class="nav-link" routerLink="/create">Create</a>
-          </li>
-          <li *ngIf="!isLogged" class="nav-item active">
-            <a class="nav-link" routerLink="/singin">SingIn</a>
-          </li>
-          <li *ngIf="!isLogged" class="nav-item active">
-            <a class="nav-link" routerLink="/singup">SingUp</a>
-          </li>
-          <li *ngIf="isLogged" class="nav-item active">
-            <a class="nav-link" routerLink="" (click)="logout()">Logout</a>
-          </li>
-        </ul>
-      </div>
+  <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <a class="navbar-brand"routerLink="/">Shop Cars</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor02" aria-controls="navbarColor02" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+  
+    <div class="collapse navbar-collapse" id="navbarColor02">
+      <ul class="navbar-nav mr-auto">
+        <li class="nav-item active" *ngIf="isLogged">
+          <a class="nav-link" routerLink="/create">Create</a>
+        </li>
+        <li class="nav-item active" *ngIf="isLogged">
+          <a class="nav-link" routerLink="/profile">{{userEmail}}</a>
+        </li>
+        <li class="nav-item" *ngIf="!isLogged">
+          <a class="nav-link" routerLink="/singin">SingIn</a>
+        </li>
+        <li class="nav-item" *ngIf="!isLogged">
+          <a class="nav-link" routerLink="/singup">SingUp</a>
+        </li>
+        <li class="nav-item" *ngIf="isLogged">
+          <a class="nav-link" routerLink="" (click)="logout()">Logout</a>
+        </li>
+      </ul>
+      <form class="form-inline my-2 my-lg-0">
+        <input class="form-control mr-sm-2" type="text" placeholder="Search">
+        <button class="btn btn-secondary my-2 my-sm-0" type="submit">Search</button>
+      </form>
     </div>
   </nav>
 
