--- a/Shop-Cars-Angular-Project/Client-Shop-Cars/src/app/home/home.component.html
+++ b/Shop-Cars-Angular-Project/Client-Shop-Cars/src/app/home/home.component.html
@@ -12,6 +12,7 @@
   </header>
 <!-- /.row -->
 <!-- <ng-container ><app-spinner></app-spinner></ng-container> -->
+
 <div class="row" *ngIf="adCars"> 
     
       <div class="col-md-4 mb-5" *ngFor='let adCar of adCars'>
@@ -23,7 +24,7 @@
           <p class="card-text">{{adCar.description}}</p>
         </div>
         <div class="card-footer">
-          <a href="#" class="btn btn-primary">More Info</a>
+          <a routerLink= '/detail/{{adCar._id}}' class="btn btn-primary">More Info</a>
         </div>
       </div>
     </div>
