--- a/Shop-Cars-Angular-Project/Client-Shop-Cars/src/app/user/profile/profile.component.html
+++ b/Shop-Cars-Angular-Project/Client-Shop-Cars/src/app/user/profile/profile.component.html
@@ -1,1 +1,37 @@
-<p>profile works!</p>
+<div class="col-sm-9 col-md-7 col-lg-5 mx-auto">
+    <div class="panel panel-default">
+      <div class="text-underline panel-body panel-primary">
+        Logged as: <span class="text-bold">currentUser.email</span>
+        <a class="float-right custom-button btn btn-danger" (click)="logout()">Logout</a>
+      </div>
+      <div class="panel-footer">
+  
+        <form  #form>
+          <div class="form-group">
+            <label for="email">New address</label>
+            <input  type="text" id="newEmail" class="form-control"
+              placeholder="john.doe@domain.bg">
+            <p class="error-message" >Please enter valid
+              gmail.com email!
+            </p>
+          </div>
+          <div>
+            <div class="form-group">
+              <label for="password">New Password</label>
+              <input
+                type="password" id="password" class="form-control" placeholder="************">
+            </div>
+            <div class="form-group">
+              <label for="rePassword">Re-Password</label>
+              <input
+                 type="password" id="rePassword" class="form-control"
+                placeholder="************">
+            </div>
+            <p class="error-message" >Passwords
+              don't
+              match!</p>
+          </div>
+          <button [disabled]="form.invalid" type="submit" class="btn btn-primary">Change profile information</button>
+        </form>
+  
+      
