--- a/Shop-Cars-Angular-Project/Client-Shop-Cars/src/app/core/spinner/spinner.component.html
+++ b/Shop-Cars-Angular-Project/Client-Shop-Cars/src/app/core/spinner/spinner.component.html
@@ -1,6 +1,10 @@
-
-<div class="d-flex justify-content-center">
-    <div class="spinner-border text-warning" role="status">
-      <span class="sr-only">Loading...</span>
-    </div>
-  </div>
+<div class="lds-roller">
+  <div></div>
+  <div></div>
+  <div></div>
+  <div></div>
+  <div></div>
+  <div></div>
+  <div></div>
+  <div></div>
+</div>
