--- a/Shop-Cars-Angular-Project/Client-Shop-Cars/src/app/cars/my-ad-cars/my-ad-cars.component.html
+++ b/Shop-Cars-Angular-Project/Client-Shop-Cars/src/app/cars/my-ad-cars/my-ad-cars.component.html
@@ -1,3 +1,6 @@
+<div *ngIf="!checkAdCars" class="messag">
+  <h1>No ads have been published yet</h1>
+  </div>
 <div class="row" *ngIf="adCars"> 
     
     <div class="col-md-4 mb-5" *ngFor='let adCar of adCars'>
