--- a/Shop-Cars-Angular-Project/Client-Shop-Cars/src/app/core/footer/footer.component.css
+++ b/Shop-Cars-Angular-Project/Client-Shop-Cars/src/app/core/footer/footer.component.css
@@ -1,3 +1,11 @@
-.py-5 {
-    padding-top: 20%;
-}
+
+
+.footer {
+    position: relative;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    padding: 1rem;
+    background-color: #efefef;
+    text-align: center;
+  }
