--- a/Shop-Cars-Angular-Project/Client-Shop-Cars/src/app/home/home.component.css
+++ b/Shop-Cars-Angular-Project/Client-Shop-Cars/src/app/home/home.component.css
@@ -1,1 +1,14 @@
 
+.bg-primary{
+    background-image: url(https://charge.cars/static/Charge-cars-01-ba6deb5aeccafa00f213ca65d335d4fe.jpg);
+    background-repeat: no-repeat;
+    background-size: 1350px 450px;
+    
+}
+
+.messag h1 {
+
+    text-align: center;
+vertical-align: middle;
+line-height: 90px;
+}
