--- a/Shop-Cars-Angular-Project/Client-Shop-Cars/src/app/home/home.component.html
+++ b/Shop-Cars-Angular-Project/Client-Shop-Cars/src/app/home/home.component.html
@@ -1,9 +1,23 @@
+<header class="bg-primary py-5 mb-5">
+  <div class="container h-100">
+    <div class="row h-100 align-items-center">
+      <div class="col-lg-12">
+        <h1 class="display-4 text-white mt-5 mb-2">Shop Cars</h1>
+        <p class="lead mb-5 text-white">Sell your car quickly in Shop Cars.</p>
+      </div>
+    </div>
+  </div>
+</header>
+
 <div *ngIf="!adCars"><app-spinner></app-spinner></div>
 <div *ngIf="adCars">
  
 </div>
-<div class="row" *ngIf="adCars">
-  
+
+<div *ngIf="!checkAdCars" class="messag">
+<h1>No ads have been published yet !</h1>
+</div>
+<div class="row" *ngIf="adCars">  
   <div class="col-md-4 mb-5" *ngFor='let adCar of adCars'>
     <div class="card h-100">
       <img class="card-img-top" [src]="adCar.imgUrl" alt="">
