--- a/Shop-Cars-Angular-Project/Client-Shop-Cars/src/app/user/profile/profile.component.html
+++ b/Shop-Cars-Angular-Project/Client-Shop-Cars/src/app/user/profile/profile.component.html
@@ -27,7 +27,7 @@
               </div>
           </div>
           <div>
-            <div class="form-group">
+            <!-- <div class="form-group">
               <label for="passwordInput">New Password</label>
               <input
                #passwordInput="ngModel" 
@@ -62,7 +62,7 @@
               </div>
             <p class="error-message" >Passwords
               don't
-              match!</p>
+              match!</p> -->
           </div>
           <button [disabled]="form.invalid"  class="btn btn-primary">Change profile information</button>
         </form>
