--- a/Shop-Cars-Angular-Project/Client-Shop-Cars/src/app/err.css
+++ b/Shop-Cars-Angular-Project/Client-Shop-Cars/src/app/err.css
@@ -1,8 +1,8 @@
-.ng-touched.ng-invalid, 
+/* .ng-touched.ng-invalid, 
 .password-match-touched.password-match-invalid {
   border-color: red;
 }
 
 .ng-valid {
   border-color: green;
-}
+} */
