--- a/Shop-Cars-Angular-Project/Client-Shop-Cars/src/app/home/home.component.css
+++ b/Shop-Cars-Angular-Project/Client-Shop-Cars/src/app/home/home.component.css
@@ -12,3 +12,10 @@
 vertical-align: middle;
 line-height: 90px;
 }
+
+.form-inline {
+    display: flex;
+    justify-content: center;
+    
+    padding-bottom: 32px;
+}
