--- a/Shop-Cars-Angular-Project/Client-Shop-Cars/src/app/home/home.component.html
+++ b/Shop-Cars-Angular-Project/Client-Shop-Cars/src/app/home/home.component.html
@@ -43,7 +43,7 @@
   <h1>No ads have been published yet !</h1>
 </div>
 <div class="messag">
-  <h1>All ad Cars</h1>
+  <h1>All Ad Cars</h1>
 </div>
 <div class="row" *ngIf="adCars">
   <div class="col-md-4 mb-5" *ngFor='let adCar of adCars'>
