--- a/Shop-Cars-Angular-Project/Client-Shop-Cars/src/app/cars/details/details.component.html
+++ b/Shop-Cars-Angular-Project/Client-Shop-Cars/src/app/cars/details/details.component.html
@@ -28,7 +28,7 @@
       </ul>
       <div *ngIf="adCar | check">
           <button type="button" class="btn btn-danger btn-lg btn-block" (click)=deletAdCar()>Delete</button>
-      <button routerLink="/edit/{{adCar._id}}"  class="btn btn-warning btn-lg btn-block">Edit</button>
+      <button routerLink="/car/edit/{{adCar._id}}"  class="btn btn-warning btn-lg btn-block">Edit</button>
       </div>
     </div>
     
