--- a/Shop-Cars-Angular-Project/Client-Shop-Cars/src/app/cars/my-ad-cars/my-ad-cars.component.html
+++ b/Shop-Cars-Angular-Project/Client-Shop-Cars/src/app/cars/my-ad-cars/my-ad-cars.component.html
@@ -12,7 +12,7 @@
         <p class="card-text">{{adCar.description}}</p>
       </div>
       <div class="card-footer">
-        <a routerLink= '/detail/{{adCar._id}}' class="btn btn-primary">More Info</a>
+        <a routerLink= '/car/detail/{{adCar._id}}' class="btn btn-primary">More Info</a>
       </div>
     </div>
   </div>
